# mylibs

./: wheel_builder-1.0.0.2508172239-py3-none-any.whl  x.py
Cryptography_algorithms/: Readme.md
Cryptography_algorithms/config/: initModule.sh  local.mk  localWithBase.mk
Cryptography_algorithms/config/exFile/: template_export.cpp  template_export.hpp  test.cpp  unitTest.hpp
Cryptography_algorithms/randomized_algorithms/: Makefile
Cryptography_algorithms/randomized_algorithms/johnson_lindenstrauss/: Makefile  exports.map  johnson_lindenstrauss_export.cpp  johnson_lindenstrauss_export.hpp
Cryptography_algorithms/randomized_algorithms/johnson_lindenstrauss/core/: f1.cpp  f1.hpp
Cryptography_algorithms/randomized_algorithms/johnson_lindenstrauss/tests/: test.cpp  unit1.cpp  unit1.hpp
Cryptography_algorithms/randomized_algorithms/kmean/: Makefile  kmean_export.cpp  kmean_export.hpp
Cryptography_algorithms/randomized_algorithms/set_covering/: Makefile  set_covering_export.cpp  set_covering_export.hpp
clibs/: myclibs.py  test.py
firmware_testing/: Readme.md
hehe/: hehe.py
huhu/: Readme.md  noxfile.py  report.json  repost.json
huhu/offline_packages/graphviz/: graphviz_2.42.2-6ubuntu0.1_amd64.deb  urls.txt
huhu/offline_packages/pyan3/: pyan3-1.2.0-py3-none-any.whl
huhu/pip_wheels/: cve_2025_1851-1.0.0-py3-none-any.whl  example_pkg_a-1-py3-none-any.whl  glucus-1.0.0-py3-none-any.whl
huhu/pkgutil/cve_2025_1851/: setup.py
huhu/pkgutil/ex_pkg/: setup.py
huhu/pkgutil/glucus/: setup.py
nanobind/: CMakeLists.txt  object_ownership.cpp  test.py
(+28 files in other folders)
